--- a/rabbits/vandenberghe-vonlanthen-in/.classpath
+++ b/rabbits/vandenberghe-vonlanthen-in/.classpath
@@ -2,5 +2,17 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/rabbits/lib/repast.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/home/loic/IA/intelligent-agents/rabbits/lib/api/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/rabbits/lib/colt.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/rabbits/lib/commons-math-1.1.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/rabbits/lib/jdom.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/rabbits/lib/jsolver.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/rabbits/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/rabbits/lib/logist.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/rabbits/lib/plot.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
