--- a/reactive/.classpath
+++ b/reactive/.classpath
@@ -2,6 +2,20 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/workspace/logist/logist.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/logist/logist.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/home/loic/IA/intelligent-agents/logist/doc/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/logist/lib/colt.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/logist/lib/commons-math-1.1.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/logist/lib/jdom.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/logist/lib/jsolver.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/logist/lib/plot.jar"/>
+	<classpathentry kind="lib" path="/home/loic/IA/intelligent-agents/logist/lib/repast.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/home/loic/IA/intelligent-agents/logist/doc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
